<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".CreateRide">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            />
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="5">
        <Button
            android:id="@+id/DateButton"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/pick_date"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:background="@color/colorAccent"
            android:onClick="datePicker"
            />
        <TextView
            android:id="@+id/date_text"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/date_text"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight = "1"/>
        <TextView
            android:id="@+id/time_text"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/time_text"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight = "2"/>
        <EditText
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="time"
            android:text=""
            android:textColor="#ffff"
            android:textSize="20sp"
            android:hint="@string/enter_time"
            android:onClick="timePicker"/>
        <TextView
            android:id="@+id/startPointText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/s_l_text"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight = "3"/>
        <EditText
            android:id="@+id/startPoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text=""
            android:textColor="#ffff"
            android:textSize="20sp"
            android:hint="@string/start_destination_text"/>
        <TextView
            android:id="@+id/des_text"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/des_text"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight = "4"/>
        <EditText
            android:id="@+id/destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:text=""
            android:hint="@string/write_here_dest"/>
        <TextView
            android:id="@+id/number_text"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/n_p_text"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight = "5"/>
        <Spinner
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/colorPrimary"
            tools:background="@color/colorAccent"
            android:inputType="number"
            android:text=""
            android:hint= "@string/enter_number"/>
        <Button
            android:id="@+id/createARide_button"
            android:layout_width="204dp"
            android:layout_height="63dp"
            android:text="@string/create_a_ride"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:background="@color/colorAccent"
            android:onClick ="submitRideMsg"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>