<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <android.support.design.widget.AppBarLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            />


    </android.support.design.widget.AppBarLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:inputType="text"
        android:layout_centerHorizontal="true"
        android:id="@+id/first_name"
        android:background="@color/back_gray"
        android:layout_above="@+id/last_name"
        android:layout_marginBottom="30dp"
        android:paddingLeft="@dimen/width_dim"
        android:paddingRight="@dimen/width_dim"
        android:paddingTop="@dimen/vertical_dim"
        android:paddingBottom="@dimen/vertical_dim"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:inputType="text"
        android:id="@+id/last_name"
        android:background="@color/back_gray"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/calvin_id"
        android:layout_marginBottom="30dp"
        android:paddingLeft="@dimen/width_dim"
        android:paddingRight="@dimen/width_dim"
        android:paddingTop="@dimen/vertical_dim"
        android:paddingBottom="@dimen/vertical_dim"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calvin_id"
        android:hint="@string/calvin_id"
        android:inputType="text"
        android:background="@color/back_gray"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_centerVertical="true"
        android:paddingLeft="@dimen/width_dim2"
        android:paddingRight="@dimen/width_dim2"
        android:paddingTop="@dimen/vertical_dim"
        android:paddingBottom="@dimen/vertical_dim"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/calvin_id"
        android:layout_centerHorizontal="true"
        android:background="@color/back_gray"
        android:paddingLeft="@dimen/width_dim"
        android:paddingRight="@dimen/width_dim"
        android:paddingTop="@dimen/vertical_dim"
        android:paddingBottom="@dimen/vertical_dim"/>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/password"
        android:text="@string/sign_up"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:paddingLeft="@dimen/width_dim"
        android:paddingRight="@dimen/width_dim"
        android:paddingTop="@dimen/vertical_dim"
        android:paddingBottom="@dimen/vertical_dim"
        android:textColor="#FFFFFF"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="return_to_login"/>

</RelativeLayout>