<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:weightSum="99"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".BasketActivity"
    tools:showIn="@layout/activity_basket">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refresh_prompt"
        android:textSize="12sp"
        android:layout_marginStart="25dp"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/refresh_button"
        android:background="@color/colorPrimary"
        app:srcCompat="@drawable/refreshicon"
        android:onClick="refresh"/>


    <TextView
        android:id="@+id/driveBasketTitle"
        android:background="@color/colorAccent"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rides_as_driver"/>

    <ScrollView
        android:id="@+id/scroll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_weight="33">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/upcoming_drives"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                app:layout_scrollFlags="scroll|enterAlways"/>
        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/rideBasketTitle"
        android:background="@color/colorAccent"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passenger_rides"/>

    <ScrollView
        android:id="@+id/scroll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_weight="33">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/upcoming_rides"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"/>
        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/pastBasketTitle"
        android:background="@color/colorAccent"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ride_history"/>

    <ScrollView
        android:id="@+id/scroll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_weight="33">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/past_rides"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>